<resources>

    <string name="app_name">MyPic</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="fabulous">Storm is coming</string>
    <string name="my_pic_image">myPic Image</string>
    <string name="get_image">Get Image</string>
    <string name="title_activity_get_image">GetImageActivity</string>
    <string name="title_activity_settings">MyPic > Settings</string>
    <string name="init_text">You are fabulous</string>
    <string name="done">Done</string>
    <string name="image_update_str">Image Update</string>
    <string name="reset_text_pos_str">Reset Text Pos</string>
    

    <string-array name="Fonts">
        <item>Normal</item>
        <item>Normal Bold</item>
        <item>Monospace</item>
        <item>Sans Serif</item>
        <item>Serif</item>
    </string-array>
    <string-array name="Color">
        <item>Black</item>
        <item>Red</item>
        <item>Green</item>
        <item>White</item>
        <item>Blue</item>
        <item>Grey</item>
        <item>Cyan</item>
        <item>Dark Gray</item>
        <item>Magenta</item>
        <item>Transparent</item>
        <item>Yellow</item>
    </string-array>
    <string-array name="Style">
        <item>Normal</item>
        <item>Bold</item>
        <item>Italic</item>
        <item>Bold Italic</item>
    </string-array>
    <string-array name="Size">
        <item>12</item>
        <item>16</item>
        <item>18</item>
        <item>24</item>
        <item>28</item>
        <item>32</item>
        <item>36</item>
        <item>40</item>
    </string-array>
    <string-array name="Rotate">
        <item>0</item>
        <item>-90</item>
        <item>90</item>
        <item>-45</item>
        <item>45</item>
        <item>180</item>
    </string-array>

    <string name="font">Font:</string>
    <string name="style">Style:</string>
    <string name="color_label">Color:</string>
    <string name="size_label">Size:</string>
    <string name="rotate_label">Rotate:</string>
    <string name="title_activity_background">BackgroundActivity</string>
    <string name="background_select">Select A Background</string>
    <string name="help_menu_String">Help</string>
    <string name="tips_help_menu">Tips</string>
    <string name="version_menu_item">Version</string>
    <string name="wallpaper_menu_item">Use This As Wallpaper</string>
    <string name="message_text_string">Message for Pic</string>

</resources>
