<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings_menu_item"
        android:orderInCategory="100"
        android:title="@string/action_settings" 
		android:showAsAction="ifRoom"
		android:icon="@drawable/icn_settings"
        >
        <menu>
            <item android:id="@+id/setting_menu_item" 
                android:title="@string/title_activity_settings" 
                />
            <item android:id="@+id/wallpaper_item" 
                android:title="@string/wallpaper_menu_item"/>
        </menu>
    </item>
        
        <!--
        android:onClick="@string/action_settings"  
        android:showAsAction="never"  -->
        
    <item android:id="@+id/help_menu_item" 
		android:showAsAction="ifRoom"
        android:title="@string/help_menu_String">
        <menu>
            <item android:id="@+id/tips_menu_item" 
                android:title="@string/tips_help_menu" 
                android:showAsAction="ifRoom"/>
            <item android:id="@+id/version_menu_item" 
                android:title="@string/version_menu_item" 
                android:showAsAction="ifRoom"/>
        </menu>
        
    </item><item android:id="@+id/load_new_pic" 
        android:title="@string/image_update_str"
        android:showAsAction="ifRoom"
		android:icon="@drawable/icn_image"
        >
    </item>
    
</menu>
